--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-content">
-    <img src="images/book.png" alt="Book Icon" class="hero-icon">
+    <img src="book.png" alt="Book Icon" class="hero-icon">
     <h1>Enhance your learning<br>with our resources</h1>
     <p>All BE Computer syllabus, notes and old questions in one place.</p>
     <button class="primary-btn">Get Started</button>
@@ -43,17 +43,17 @@
 <!-- FEATURES -->
 <section class="features">
   <div class="feature-card">
-    <img src="images\academicr.png" alt="Academic Icon" class="academic-icon">
+    <img src="academicr.png" alt="Academic Icon" class="academic-icon">
     <h3>Academic Resources</h3>
     <p>Semester-wise syllabus and notes</p>
   </div>
   <div class="feature-card">
-    <img src="images/time-management.png" alt="Time Icon" class="time-icon">
+    <img src="time-management.png" alt="Time Icon" class="time-icon">
     <h3>Time Management</h3>
     <p>Study smarter with organized materials</p>
   </div>
   <div class="feature-card">
-    <img src="images/graduation-hat.png" alt="Graduate Icon" class="graduate-icon">
+    <img src="graduation-hat.png" alt="Graduate Icon" class="graduate-icon">
     <h3>Graduate Learning</h3>
     <p>Designed for BE Computer students</p>
   </div>
@@ -69,7 +69,7 @@
 
     <div class="community-card">
       <div class="avatar">
-        <img src="images/user1.jpg" alt="Student">
+        <img src="user1.jpg" alt="Student">
       </div>
       <p class="review">
         “I found everything I needed here. Notes and syllabus are well organized.”
@@ -79,7 +79,7 @@
 
     <div class="community-card">
       <div class="avatar">
-        <img src="images/user2.jpg" alt="Student">
+        <img src="user2.jpg" alt="Student">
       </div>
       <p class="review">
         “This platform made studying enjoyable and stress-free.”
@@ -89,7 +89,7 @@
 
     <div class="community-card">
       <div class="avatar">
-        <img src="images/user3.jpg" alt="Graduate">
+        <img src="user3.jpg" alt="Graduate">
       </div>
       <p class="review">
         “Resources are top-notch and exam-oriented. Highly recommended.”
@@ -99,7 +99,7 @@
 
     <div class="community-card">
       <div class="avatar">
-        <img src="images/advisor3.jpeg" alt="Student">
+        <img src="advisor3.jpeg" alt="Student">
       </div>
       <p class="review">
         “Old questions helped me a lot during exams.”
@@ -185,3 +185,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
