Fix HTML formatting and restore contact page content

--- a/contact.html
+++ b/contact.html
@@ -53,19 +53,19 @@
     <div class="advisor-grid">
 
       <div class="advisor">
-        <img src="images/advisor1.jpg" alt="Advisor 1">
+        <img src="advisor1.jpg" alt="Advisor 1">
         <h4>Ragib Khyaju</h4>
         <p>Email: ragibkhyazoo@gmail.com</p>
       </div>
 
       <div class="advisor">
-        <img src="images/advisor2.jpeg" alt="Advisor 2">
+        <img src="advisor2.jpeg" alt="Advisor 2">
         <h4>Pawan Regmi</h4>
         <p>Email: regmipawan@gmail.com</p>
       </div>
 
       <div class="advisor">
-        <img src="images/advisor3.jpeg" alt="Advisor 3">
+        <img src="advisor3.jpeg" alt="Advisor 3">
         <h4>Rambhakta Pandey</h4>
         <p>Email: pandeyram@gmail.com</p>
       </div>
@@ -147,3 +147,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
