Fix formatting issues in contact.html
Updated the contact.html file to fix formatting issues and ensure proper HTML structure.

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
     <div class="advisor-grid">
 
       <div class="advisor">
-        <img src="advisor1.JPG" alt="Advisor 1">
+        <img src="advisor1.jpg" alt="Advisor 1">
         <h4>Ragib Khyaju</h4>
         <p>Email: ragibkhyazoo@gmail.com</p>
       </div>
@@ -147,5 +147,6 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
