--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,9 @@
 
 <!-- NAVBAR -->
 <header class="navbar">
+  <div class="menu-toggle" id="menuToggle">
+  ☰
+</div>
   <div class="logo">BE Computer Hub</div>
   <nav>
   <a href="index.html">Home</a>
@@ -147,6 +150,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
