--- a/questions.html
+++ b/questions.html
@@ -15,6 +15,9 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="logo">BE Computer Hub</div>
+  <div class="menu-toggle" id="menuToggle">
+  ☰
+</div>
   <nav>
   <a href="index.html">Home</a>
   <a href="syllabus.html">Syllabus</a>
@@ -128,3 +131,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
