Add menu toggle button to syllabus.html

--- a/syllabus.html
+++ b/syllabus.html
@@ -8,6 +8,9 @@
 
 <!-- NAVBAR -->
 <header class="navbar">
+  <div class="menu-toggle" id="menuToggle">
+  ☰
+</div>
   <div class="logo">BE Computer Hub</div>
   <nav>
   <a href="index.html">Home</a>
@@ -105,3 +108,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
