Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="community-card">
       <div class="avatar">
-        <img src="user3.JPG" alt="Graduate">
+        <img src="advisor1.jpg" alt="Graduate">
       </div>
       <p class="review">
         “Resources are top-notch and exam-oriented. Highly recommended.”
@@ -188,6 +188,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
